feat(security): add RateLimitFilter to limit requests on authentication endpoints; enhance JWT error handling feat(config): add AsyncConfig for asynchronous email processing; update application configuration for seeder and CORS feat(docker): add environment variables for application configuration in docker-compose fix(seeder): change log level to debug for existing seed users; update seeded user log message fix(password): ensure password_hash column is NOT NULL in database migration fix(validation): add size validation for profile picture URL in UpdateProfileRequest fix(entity): update Lombok annotations for User, Role, UserRole, UserSession, and PasswordReset entities fix(exception): translate error message in GlobalExceptionHandler to Indonesian