@@ -9,8 +9,6 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
@@ -24,7 +22,7 @@ public class CustomUserDetailsService implements UserDetailsService {
 
         var authorities = user.getUserRoles().stream()
                 .map(ur -> new SimpleGrantedAuthority("ROLE_" + ur.getRole().getName().toUpperCase()))
-                .collect(Collectors.toList());
+                .toList();
 
         return org.springframework.security.core.userdetails.User.builder()
                 .username(user.getEmail())
